<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">

    <string name="app_name">Popcorn Time</string>
    <string name="subtitles">Subtitles</string>
    <string name="disable_subs">Disable subtitles</string>

    <string name="no_connection">No connection</string>
    <string name="no_connection_desc">We could not connect to the selected Popcorn Time instance, make sure Popcorn Time (v0.3.3+) is running and check your settings and internet connection.</string>
    <string name="retry">Retry</string>
    <string name="now_playing">Now playing</string>
    <string name="loading">Popcorn Time is loading data…</string>

    <string name="minutes">min</string>
    <string name="watch_trailer">Watch trailer</string>

    <string name="left">Left</string>
    <string name="right">Right</string>
    <string name="up">Up</string>
    <string name="down">Down</string>
    <string name="toggle_tabs">Toggle tabs</string>
    <string name="add_favourite">Add to favourites</string>
    <string name="remove_favourite">Remove from favourites</string>
    <string name="watched">Toggle watched</string>
    <string name="fullscreen">Toggle fullscreen</string>
    <string name="search">Search</string>
    <string name="subs">Select subtitles</string>
    <string name="player">Select video player</string>
    <string name="quality">Toggle quality</string>
    <string name="next_season">Next season</string>
    <string name="prev_season">Previous season</string>
    <string name="forward">Seek forward</string>
    <string name="backward">Seek backward</string>
    <string name="fastforward">Fast seek forward</string>
    <string name="fastbackward">Fast seek backward</string>

    <string name="no_instances">Add a new instance to start using Popcorn Time Remote</string>
    <string name="add_instance">Add instance</string>
    <string name="edit_instance">Edit instance</string>
    <string name="delete_instance">Delete instance</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="ip">IP Address</string>
    <string name="name">Name</string>
    <string name="port">Port</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter_manually">Enter settings manually</string>
    <string name="scan_qr">Scan easy pairing QR</string>
    <string name="easy_pairing">Easy pairing is available in Popcorn Time v0.3.4 and higher. Open the advanced settings and generate your QR code in the \'remote control\' section.</string>

</resources>
